feat: profile settings
