# src/main/kotlin/edu/furman/artgalleryspring/dto/profile/ProfileResponse.kt
@@ -1,0 +1,11 @@
+package edu.furman.artgalleryspring.dto.profile
+
+import edu.furman.artgalleryspring.annotations.NoArg
+
+@NoArg
+data class ProfileResponse (
+    var firstName: String,
+    var lastName: String,
+    var email: String,
+    var avatarUrl: String,
+)
